--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,11 +24,11 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - ./backups:/tmp/backups
+      - postgres_data:/var/lib/postgresql/data
 
   # 3. Airflow (The Chef/Orchestrator)
   airflow-standalone:
-    build: .
+    image: apache/airflow:2.7.3-python3.9
     container_name: airflow-lazarus
     command: airflow standalone
     ports:
@@ -51,5 +51,19 @@ services:
       postgres-airflow:
         condition: service_healthy
 
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    ports:
+      - "3000:3000"
+    environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
+    volumes:
+      - ./metabase-data:/metabase-data
+    depends_on:
+      - postgres-prod
+
+
 volumes:
   postgres_data:
+
